--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safe-get",
-  "version": "1.0.1",
-  "description": "A tiny (1-line) safe accessor that prevents 'Cannot read property of undefined' errors",
+  "version": "1.0.2",
+  "description": "A small safe accessor that uses reduce to prevent 'Cannot read property of undefined' errors",
   "main": "index.js",
   "scripts": {
     "test": "node tests.js"
